SCSS code refractored, toasts added, layout bugs resolved, events handled

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,18 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@400;500;700&display=swap');
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-
-    @media screen and (max-width: 500px) {
-        font-size: 14px;
-    }
-}
-
-.container {
-    
-    &[data-theme="light"] {
+    [data-theme="light"] {
         --action-shade: #1a73e8;
         --active-action-shade: #186bd6;
         --bg-shade: #f5f8ff;
@@ -22,7 +11,7 @@
         --theme-icon: url("./resources/moon.svg")
     }
     
-    &[data-theme="dark"] {
+    [data-theme="dark"] {
         --action-shade: #fddb00;
         --active-action-shade: #e4c500;
         --bg-shade: #202124;
@@ -31,38 +20,46 @@
         --theme-icon: "sun";
         --theme-icon: url("./resources/sunny.svg")
     }
+    
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Red Hat Text', sans-serif;
+    color: var(--txt-color);
+    transition: color .25s, background-color .25s, transform .25s;
+
+    @media screen and (max-width: 500px) {
+        font-size: 14px;
+    }
 }
 
 .container {
     min-height: 100vh;
-    font-family: 'Red Hat Text', sans-serif;
-    color: var(--txt-color);
     background-color: var(--bg-shade);
-    padding: 0 25vw;
+    padding: 5rem 25vw;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    transition: color .25s, background-color .25s;
 
     & > div {
         width: 100%;
     }
 
     @media screen and (max-width: 1440px) {
-        padding: 0 20vw;
+        padding: 5rem 20vw;
     }
 
     @media screen and (max-width: 1024px) {
-        padding: 0 15vw;
+        padding: 5rem 15vw;
     }
 
     @media screen and (max-width: 768px) {
-        padding: 0 10vw;
+        padding: 2.5rem 10vw;
     }
 
     @media screen and (max-width: 500px) {
-        padding: 0 5vw;
+        padding: 2.5rem 5vw;
     }
 }
 
@@ -77,10 +74,8 @@
     }
 
     .theme-toggler {
-        opacity: 0.85;
         font-size: 0.8rem;
         display: flex;
-        align-items: center;
         cursor: pointer;
         padding: 0.25rem 0.5rem;
 
@@ -88,19 +83,12 @@
             letter-spacing: 0.25rem;
             margin-right: 0.5rem;
         }
-
-        .theme-icon {
-            background-color: var(--txt-color);
-            height: 1.05rem;
-            width: 1.05rem;
-            -webkit-mask: var(--theme-icon) no-repeat center;
-            mask: var(--theme-icon) no-repeat center;
-        }
     }
 
     & ~ div {
         background-color: var(--card-shade);
         border-radius: 0.5rem;
+        box-shadow: 0 0.1rem 0.5rem 0.1rem rgba(0, 0, 0, 0.05);
     }
 }
 
@@ -116,23 +104,17 @@
         padding-left: 2rem;
     }
 
-    &::before {
-        content: "";
+    .octicon-search {
         position: absolute;
         top: calc(50% - 1rem);
         left: 1.75rem;
-        background-color: var(--action-shade);
-        opacity: 0.75;
-        mask: url("./resources/search.svg") no-repeat center;
-        -webkit-mask: url("./resources/search.svg") no-repeat center;
-        height: 2rem;
-        width: 2rem;
+        fill: var(--action-shade);
 
         @media screen and (max-width: 500px) {
             top: calc(50% - 0.75rem);
             left: 0.75rem;
-            height: 1.5rem;
             width: 1.5rem;
+            height: 1.5rem;
         }
     }
 
@@ -182,14 +164,12 @@
     }
 
     button {
-        font-size: 1rem;
-        font-weight: bold;
-        background-color: var(--action-shade);
+        font-weight: 500;
         color: var(--bg-shade);
+        background-color: var(--action-shade);
         border-radius: 0.3rem;
         padding: 0.75rem 1.25rem;
         cursor: pointer;
-        transition: transform 0.25s;
 
         &:hover {
             background-color: var(--active-action-shade);
@@ -224,7 +204,6 @@
         height: 7.5rem;
         width: 7.5rem;
         border-radius: 1rem;
-        background-color: var(--bg-shade);
         background-size: cover;
 
         @media screen and (max-width: 500px) {
@@ -250,7 +229,7 @@
         }
     }
     
-    .bio {
+    .lessOpaque {
         opacity: 0.85;
     }
 
@@ -324,6 +303,10 @@
             padding: 1rem 0;
             margin: 0 1rem;
 
+            @media screen and (max-width: 768px) {
+                width: calc(100% - 2rem);
+            }
+
             & > *:first-child {
                 margin-right: 1rem;
             }
@@ -341,7 +324,6 @@
     }
 
     a {
-        color: var(--active-action-shade);
-        text-decoration: none;
+        color: var(--action-shade);
     }
 }
